stateDiagram-v2
    %% L++ State Diagram: L++ Event Sequence Simulator
    [*] --> idle
    idle --> ready : LOAD [blueprint is None]
    ready --> ready : LOAD
    simulating --> ready : LOAD
    ready --> simulating : START [blueprint is not None]
    simulating --> simulating : DISPATCH
    simulating --> simulating : SET_CONTEXT
    simulating --> simulating : REFRESH
    simulating --> simulating : EVAL_GATES
    simulating --> simulating : FORK
    simulating --> simulating : SWITCH_FORK [forks is not None and len(f...]
    simulating --> simulating : STEP_BACK [trace is not None and len(t...]
    simulating --> simulating : SET_SEQUENCE
    simulating --> simulating : RUN_SEQUENCE [sequence is not None and le...]
    simulating --> simulating : FUZZ
    simulating --> simulating : FIND_PATH
    simulating --> simulating : EXPLORE
    simulating --> simulating : VIEW_TRACE
    simulating --> simulating : VIEW_SPACE [state_space is not None]
    simulating --> simulating : EXPORT [trace is not None and len(t...]
    simulating --> simulating : IMPORT [blueprint is not None]
    simulating --> simulating : RESET
    simulating --> ready : STOP
    ready --> idle : UNLOAD
    simulating --> idle : UNLOAD